# agentskills-garden

./: .gitattributes  .gitignore  AGENTSKILLS.md  CONTRIBUTING.md  LICENSE  README.md  README_LOCAL.md  pyproject.toml  registry.json  registry.yaml  requirements.txt  setup_skills.ps1  setup_skills.sh
.github/: CLA.md  PHASE0_COMPLETE.md
.github/prompts/: plan-agentskillsGarden-0.prompt.md
.github/workflows/: ci.yml  deploy-pages.yml  nightly_evals.yml  validate.yml
docs/: concepts.md  getting-started.md  how-it-works.md  master-skills.md  named-principles.md  plan-formats.md  scripts.md  skills-bridge.md  tags.md
docs/references/: worldbuilding-prompting-transcript.md
evals/: human_review_checklist.md  judge.py
evals/golden_dataset/: README.md
infra/: Dockerfile.base  docker-compose.yml  requirements.txt
integrations/mcp/: README.md  manifest.json  requirements.txt  server.py
integrations/openai/: README.md  generate.py
integrations/system_prompts/: README.md  compose.py
legacy/: README.md  setup_skills.ps1  setup_skills.sh
schemas/: http_contract.schema.json  skill.schema.json
scripts/: _common.ps1  benchmark.py  bootstrap.ps1  build.py  build_site.py  check-links.py  cli.py  gather-skills.ps1  install-garden.ps1  link-skills.ps1  migrate.py  migrate_to_spec.py  orchestrator.py  promote-skills.ps1  reset_main.py  setup-garden.ps1  skill_lib.py  skills_loader.py  tag_axes.py  taxonomy.py  validate.py  validate_skills.py
scripts/site_templates/: base.html  category.html  domain.html  filter.js  home.html  manifest.webmanifest  prose.html  skill.html  style.css  sw.js  tag.html
skills/: registry.yaml
skills/00-foundation/: KERNEL.md  auditor.md  constitution.md  librarian.md  scratchpad.md
skills/10-discovery/: domain-modeling.md  requirements-elicitation.md
skills/20-architecture/: adr-management.md  api-contract-design.md  database-design.md  system-design.md
skills/20-planning/: dependency-analysis.md  estimation.md  risk-assessment.md  task-decomposition.md
skills/200-writing/: .gitkeep
skills/30-implementation/: api-implementation.md  cleanup.md  code-generation.md  data-access.md  error-handling.md  refactoring-suite.md  refactoring.md  tdd-workflow.md
skills/300-data-ml/: .gitkeep
skills/40-quality/: code-review.md  integration-testing.md  mutation-testing.md  performance-review.md  security-review.md  test-strategy.md  testing-strategy.md  unit-testing.md
skills/400-business/: .gitkeep
skills/50-documentation/: api-documentation.md  changelog-generation.md  decision-records.md  inline-documentation.md
skills/50-performance/: caching-strategy.md  db-tuning.md  profiling-analysis.md
skills/60-debugging/: error-handling.md  log-analysis.md  root-cause-analysis.md
skills/60-security/: auth-implementation.md  dependency-scanning.md  secure-coding-review.md  threat-modeling.md
skills/70-devops/: ci-pipeline.md  docker-containerization.md  kubernetes-helm.md  monitoring-setup.md  terraform-iac.md
skills/80-collaboration/: git-workflow.md  knowledge-sharing.md  pair-programming.md  pr-management.md
skills/80-docs/: openapi-specs.md  (+2 more)
templates/: skill-template.md
tools/: generate_docs.py
(+236 files in other folders)
